--- a/MIS_2019/Views/Shared/_Layout2.cshtml
+++ b/MIS_2019/Views/Shared/_Layout2.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="en" id="page2" dir="ltr">
 <head>
 
  
@@ -11,8 +11,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <meta name="viewport" content="width=device-width" />
 </head>
-<body style="padding-top:100px;">
-    <nav>
+<body  style="padding-top:100px;">
+    <nav >
         @Html.Partial("_MenuPartial")
     </nav>
     <div id="body">
