--- a/MIS_2019/Views/Shared/_MenuPartial.cshtml
+++ b/MIS_2019/Views/Shared/_MenuPartial.cshtml
@@ -1,103 +1,62 @@
-﻿
-
-
-
-<nav class="navbar navbar-default navbar-fixed-top">
-    <div class="container-fluid">
-        <div class="navbar-nav nav">
-            <nav>
-                <div class="navbar-header">
-                    <a class="navbar-brand" href="http://www.saudisoft.com/"> <img id="Img1" src="~/Images/MISlogo2.png" alt="" /> </a>
-                   
-                      
-                                <ul class="nav navbar-nav"  id="Language"role="menu">
-                                    <li class="dropdown" data-toggle="tab">English</li>
-                                    <li class="dropdown" data-toggle="tab">Arabic</li>
-                                    
-                                </ul>
-                           
-
-                        <ul class="nav navbar-nav navbar-right">
-                            <li> <img src="~/Images/SSlogo.png" /></li>
-                            @if (Session["LoginCredentials"] != null)
-                            {
-                                <li>@Html.ActionLink("Logout", "LoginPage", "Logout")</li>
-                            }
-                            else
-                            {
-                                <li>@Html.ActionLink("Login", "LoginPage", "Login")</li>
-                            }
-
-                        </ul>
-                    </div>
-            </nav>
+﻿@model MIS_2019.Models.UserModel
+<nav class="navbar navbar-default navbar-fixed-top" id="Menu">
+    <div class="container" >
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="icon icon-heart" style="font-size:30px; color:#3498db;"></span>
+            </button>
+            <a class="navbar-brand hidden-xs hidden-sm" href="#home"><span class="icon icon-heart" style="font-size:18px; color:#3498db;"></span></a>
         </div>
-        <div class="navbar-nav nav">
-            <nav id="tab1">
-                <ul class="nav navbar-nav">
-                    <li><a onclick="showHome()" href="#">Form</a></li>
-                    <li><a onclick="showReportList()" href="#">Report</a></li>
+
+        <div class="navbar-collapse collapse">
+
+            <ul class="nav navbar-nav">
+                <li><a class="navbar-brand" href="http://www.saudisoft.com/"> <img id="Img1" src="~/Images/MISlogo2.png" alt="" /> </a></li>
+            </ul>
+             
+            <ul class="nav navbar-nav navbar-right">
+                <li> <img src="~/Images/SSlogo.png" /></li>
+                @if (Session["UserName"] != null || Session["BranchCode"]!=null)
+                {
+                    <li><a>@Session["UserName"].ToString()</a></li>
+                    <li><a>@Session["BranchCode"].ToString()</a></li>
+                }
+
+            </ul>
+
+        </div><!--/.nav-collapse -->
+   
+    
+      
+        <div class="navbar-collapse collapse">
+         
+                <ul class="nav navbar-nav" >
+                    <li><a  href="/Form/ViewForm">Form</a></li>
+                    <li><a href="/Report/ViewReport">Report</a></li>
+                    
                 </ul>
-            </nav>
-            <nav id="Report">
-                <ul class="nav navbar-nav">
-                    @if (Session["ReportMenu"] != null)
+                <ul class="nav navbar-nav navbar-right">
+                    @if (Session["LoginCredentials"] != null)
                     {
-
-                        List<MIS_2019.Models.MainMenuModel> MN = new List<MIS_2019.Models.MainMenuModel>();
-                        MN = (List<MIS_2019.Models.MainMenuModel>)Session["ReportMenu"];
-                        //var groupByMenu = MenuMaster.GroupBy(x => x.MainMnuName);
-
-
-                        foreach (var MenuList in MN)
-                        {
-
-                            <li class="dropdown">
-                                <a class="dropdown-toggle" data-toggle="dropdown" href="#">@MenuList.MnuName<span class="caret"></span></a>
-                                <ul class="dropdown-menu" style="column-count : 2;grid-auto-columns:min-content; column-fill: balance; ">
-                                    @foreach (var SubMenuList in MenuList.SubMainName)
-                                    {
-
-                                        <li><a href="#">@SubMenuList</a></li>
-                                    }
-                                </ul>
-                            </li>
-
-                        }
+                        @*<li>@Html.ActionLink("Logout", "LoginPage", "Logout")</li>*@
+                        <li><a onclick="" href="/Login/LoginPage">Logout</a></li>
+                    }
+                    else
+                    {
+                        <li>@Html.ActionLink("Login", "LoginPage", "Login")</li>
                     }
 
                 </ul>
-            </nav>
-
-            <nav id="Form" style="display: none;">
-                <ul class="nav navbar-nav">
-                    @if (Session["FormMenu"] != null)
-                    {
-
-                        List<MIS_2019.Models.MainMenuModel> MN = new List<MIS_2019.Models.MainMenuModel>();
-                        MN = (List<MIS_2019.Models.MainMenuModel>)Session["FormMenu"];
-                        //var groupByMenu = MenuMaster.GroupBy(x => x.MainMnuName);
-
-
-                        foreach (var MenuList in MN)
-                        {
-
-                            <li class="dropdown">
-                                <a class="dropdown-toggle" data-toggle="dropdown" href="#">@MenuList.MnuName<span class="caret"></span></a>
-                                <ul class="dropdown-menu" style="column-count : 2;grid-auto-columns:min-content; column-fill: balance; ">
-                                    @foreach (var SubMenuList in MenuList.SubMainName)
-                                    {
-
-                                        <li><a href="#">@SubMenuList</a></li>
-                                    }
-                                </ul>
-                            </li>
-
-                        }
-                    }
-
+                <ul class="nav navbar-nav navbar-right " >
+                    <li class="dropdown" id="Language">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Language<span class="caret"></span></a>
+                        <ul class="dropdown-menu" role="menu">
+                            <li><a class="language" id="rtl" value="arabic"><img src="~/Images/ar-icon.png" alt="Arabic" height="22" width="22"/>العربية</a></li>
+                            <li><a class="language" id="ltr" value="english"><img src="~/Images/en-icon.png" alt="English"  height="22" width="22"/>English</a></li>
+                        </ul>
+                    </li>
                 </ul>
-            </nav>
+        
         </div>
     </div>
 </nav>
@@ -106,27 +65,23 @@
     var currentList = {}
     function showReportList(id) {
         $("#Report").html(currentList.name);
-
-
         $("#Form").hide();
         $("#Report").show();
         $("#form1").show();
 
     }
     function showHome(id) {
-
-
-
         $("#Form").show();
         $("#Report").hide();
         $("#form1").hide();
-
+        $("#main_Image").show();
     }
 
-    //change page language
     document.getElementById('Language').addEventListener('change', function () {
         document.getElementById('page').setAttribute('dir', this.value);
-    });
+        //here we just change page direction but you must change style (CSS) of all html tags (file menuAR.css and menuEN.css already created) 
+
+    })
 </script>
 
     
