--- a/MIS_2019/Views/Login/LoginPage.cshtml
+++ b/MIS_2019/Views/Login/LoginPage.cshtml
@@ -4,7 +4,7 @@
 
 @{
     ViewBag.Title = "LoginPage";
-    Layout = "~/Views/Shared/_Layoutmaster.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <!DOCTYPE html>
 <html id="page" dir="ltr">
